# ecsapi

./: .gitignore  .pre-commit-config.yaml  Changelog.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-build.yml  python-cicd.yml  python-publish.yml  python-test.yml
sample/: can_create_plan.py  create_script.py  create_server.py  create_template.py  delete_script.py  delete_template.py  fetch_action.py  fetch_actions.py  get_images_basics.py  get_images_cloud.py  get_plans.py  get_plans_availables.py  get_regions.py  get_regions_available.py  get_server.py  get_server_status.py  get_servers.py  get_template.py  get_templates.py  update_script.py  update_template.py  watch_action.py
src/ecsapi/: __init__.py  _action.py  _api.py  _image.py  _plan.py  _region.py  _server.py
src/ecsapi_client/: __init__.py  _api.py  _cloud_script.py  _discount_record.py  _image.py  _plan.py  _region.py  _server.py  _server_support.py  _snapshot.py  errors.py
tests/: store.py  test___init__.py  test__api.py
