[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecsapi"
version = "0.1.0"
description = "A simple SDK for manage Seeweb ecs api"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
authors = [
    {name = "Alex Massaroni", email = "alex.m@seeweb.it"},
]
maintainers = [
    {name = "Alex Massaroni", email = "alex.m@seeweb.it"},
]
requires-python = ">=3.0"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic_core>=2.0.0",
    "PyYAML>=6.0.0",
    "requests>=2.0.0",
    "typing_extensions>=4.0.0",
    "urllib3>=2.0.0",
    "python-dotenv>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/rh363/ecsapi_client"
Issues = "https://github.com/rh363/ecsapi_client/issues"
